# unibe-seminar-se-python-test-generation-klara-pynguin

./: README.md
Klara/python-tool-competition-2024-klara/: README.md  pyproject.toml
Klara/python-tool-competition-2024-klara/python_tool_competition_2024_klara/: generator.py
Klara/python-tool-competition-2024-klara/results/klara/: .coverage  statistics.csv
Klara/python-tool-competition-2024-klara/results/klara/cosmic_ray/: Quicksort.sqlite  example_1.sqlite  example_2.sqlite  example_3.sqlite  example_4.sqlite  two_sum.sqlite
Klara/python-tool-competition-2024-klara/results/klara/coverages/: Quicksort.xml  example_1.xml  example_2.xml  example_3.xml  example_4.xml  two_sum.xml
Klara/python-tool-competition-2024-klara/results/results_repeated_testing/results_1/klara/cosmic_ray/: Quicksort.sqlite  example_1.sqlite  example_2.sqlite  example_3.sqlite  example_4.sqlite  original_example.sqlite  two_sum.sqlite
Klara/python-tool-competition-2024-klara/results/results_repeated_testing/results_1/klara/coverages/: Quicksort.xml  example_1.xml  example_2.xml  example_3.xml  example_4.xml  original_example.xml  two_sum.xml
Klara/python-tool-competition-2024-klara/results/results_repeated_testing/results_3/klara/: statistics.csv
Klara/python-tool-competition-2024-klara/results/results_repeated_testing/results_8/klara/: .coverage  statistics.csv
Klara/python-tool-competition-2024-klara/targets/: Quicksort.py  example_1.py  example_2.py  example_3.py  example_4.py  two_sum.py
Pynguin/generated_tests/: test_color.py  test_helpers agent_dvr.py  test_helpers amcrest.py  (+6 more)
(+190 files in other folders)
